--- a/app/public/index.html
+++ b/app/public/index.html
@@ -10,8 +10,9 @@
     <body>
         <div id="board">
             <div id="field1">
-                <div id="tile"></div>
+                <div id="tile" style="z-index: 10; --x: 0; --y: 0;"></div>
             </div>
+            <div id="field2"></div>
         </div>
         <script type='module' src="/scripts/script.js"></script>
     </body>
