--- a/app/public/index.html
+++ b/app/public/index.html
@@ -10,10 +10,10 @@
     <body>
         <div id="board">
             <div id="field1">
-                <div id="tile" style="z-index: 10; --x: 0; --y: 0;"></div>
+                <div id="tile" style="--x: 1; --y: 1; --bpx: 100%; --bpy: 0%"></img>
             </div>
-            <div id="field2"></div>
         </div>
+        <div id="field2"></div>
         <script type='module' src="/scripts/script.js"></script>
     </body>
 </html>
