performance fix tile shifting

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -10,7 +10,9 @@
     <body>
         <div id="board">
             <div id="field1">
-                <div id="tile" style="--x: 1; --y: 1; --bpx: 100%; --bpy: 0%"></img>
+                <div id="tile" style="--x: 1; --y: 1;">
+                    <img style="--bpx: -100%; --bpy: -0%" src='/img/moonlanding.jpg'></img>
+                </div>
             </div>
         </div>
         <div id="field2"></div>
