--- a/app/public/index.html
+++ b/app/public/index.html
@@ -10,12 +10,15 @@
     <body>
         <div id="board">
             <div id="field1">
-                <div id="tile" style="--x: 1; --y: 1;">
-                    <img style="--bpx: -100%; --bpy: -0%" src='/img/moonlanding.jpg'></img>
+                <div class="tile" style="--x: 1; --y: 1;">-
+                    <img style="--backgroundposx: -100%; --backgroundposy: -0%" src='/img/moonlanding.jpg'></img>
+                </div>
+                <div class="tile" style="--x: 2; --y: 0;">-
+                    <img style="--backgroundposx: -100%; --backgroundposy: -100%" src='/img/moonlanding.jpg'></img>
                 </div>
             </div>
+            <div id="field2"></div>
         </div>
-        <div id="field2"></div>
         <script type='module' src="/scripts/script.js"></script>
     </body>
 </html>
