put all image parts in solved position for start

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -9,15 +9,12 @@
     </head>
     <body>
         <div id="board">
-            <div id="field1">
-                <div class="tile" style="--x: 1; --y: 1;">-
+            <div id="field">
+                <!--div class="tile" style="--x: 1; --y: 1;">-
                     <img style="--backgroundposx: -100%; --backgroundposy: -0%" src='/img/moonlanding.jpg'></img>
-                </div>
-                <div class="tile" style="--x: 2; --y: 0;">-
-                    <img style="--backgroundposx: -100%; --backgroundposy: -100%" src='/img/moonlanding.jpg'></img>
-                </div>
+                </div-->
             </div>
-            <div id="field2"></div>
+            <div id="switchfield"></div>
         </div>
         <script type='module' src="/scripts/script.js"></script>
     </body>
