winner winner + fixes

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -10,11 +10,9 @@
     <body>
         <div id="board">
             <div id="field">
-                <!--div class="tile" style="--x: 1; --y: 1;">-
-                    <img style="--backgroundposx: -100%; --backgroundposy: -0%" src='/img/moonlanding.jpg'></img>
-                </div-->
             </div>
             <div id="switchfield"></div>
+            <btn id="shuffle-btn"> Shuffle </btn>
         </div>
         <script type='module' src="/scripts/script.js"></script>
     </body>
