changed shuffle button

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -12,7 +12,7 @@
             <div id="field">
             </div>
             <div id="switchfield"></div>
-            <btn id="shuffle-btn"> Shuffle </btn>
+            <button id="shuffle-btn"> Shuffle </button>
         </div>
         <script type='module' src="/scripts/script.js"></script>
     </body>
